<resources>
    <string name="app_name">Storytelling Educational App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_drawer">Storytelling Educational App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Storytelling Educational App</string>
    <string name="nav_header_subtitle">Listen and Compare</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_all">All Stories</string>
    <string name="menu_categories">Categories</string>
    <string name="menu_favorites">Favorites</string>

    <string name="menu_help">Help</string>
    <string name="menu_about">About us</string>
    <string name="menu_exit">Exit</string>
</resources>