<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_all"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_all" />
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_categories" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_favorites" />
        <item
            android:id="@+id/nav_help"
            android:title="@string/menu_help" />
        <item
            android:id="@+id/nav_about"
            android:title="@string/menu_about" />
        <item
            android:id="@+id/nav_exit"
            android:title="@string/menu_exit" />
    </group>
</menu>