<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.storytellingeducationalapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_categories"
        android:name="com.example.storytellingeducationalapp.ui.categories.CategoriesFragment"
        android:label="@string/menu_categories"
        tools:layout="@layout/fragment_categories" />

    <fragment
        android:id="@+id/nav_favorites"
        android:name="com.example.storytellingeducationalapp.ui.favorites.FavoritesFragment"
        android:label="@string/menu_favorites"
        tools:layout="@layout/fragment_favorites" />
    <fragment
        android:id="@+id/nav_help"
        android:name="com.example.storytellingeducationalapp.ui.help.HelpFragment"
        android:label="Help"
        tools:layout="@layout/fragment_help" />
    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.storytellingeducationalapp.ui.about.AboutFragment"
        android:label="About us"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/nav_all"
        android:name="com.example.storytellingeducationalapp.ui.all.AllFragment"
        android:label="All Stories"
        tools:layout="@layout/fragment_all" />
    <fragment
        android:id="@+id/nav_info_story"
        android:name="com.example.storytellingeducationalapp.ui.infoCuento.InfoCuentoFragment"
        android:label="Info Story"
        tools:layout="@layout/fragment_info_cuento" />
    <fragment
        android:id="@+id/nav_lectura_cuento"
        android:name="com.example.storytellingeducationalapp.ui.lecture.LectureFragment"
        android:label="Lectura Cuento"
        tools:layout="@layout/fragment_lectura_cuento" />
</navigation>